Sudoku Detection and Solver

--- a/sudoku_detection_and_solver.ipynb
+++ b/sudoku_detection_and_solver.ipynb
@@ -677,6 +677,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Print the Sudoku Grid if the Sudoku can be Solved"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
